Fixed the admin to have styling (Fixes: 658658)

--- a/apps/myadmin/templates/admin/base_site.html
+++ b/apps/myadmin/templates/admin/base_site.html
@@ -5,7 +5,7 @@
 {% templatetag openblock %} endblock {% templatetag closeblock %}
 {% templatetag openblock %} block extrahead {% templatetag closeblock %}
   {% templatetag openvariable %} super() {% templatetag closevariable %}
-  <link rel="stylesheet" href="{{ MEDIA_URL}}css/zamboni/admin-django.css">
+  <link rel="stylesheet" href="{{ MEDIA_URL}}css/admin.css">
   {% block extrastyle %}{% endblock %}
   {% block extrahead %}{% endblock %}
 {% templatetag openblock %} endblock {% templatetag closeblock %}
