--- a/apps/website_issues/templates/website_issues/includes/sites_list.html
+++ b/apps/website_issues/templates/website_issues/includes/sites_list.html
@@ -43,7 +43,7 @@
       </p>
       <ul class="meta">
         <li><a href="{{ sites_url(url=site.url) }}">
-          {% trans num=site.size, count=site.size|numberfmt %}
+          {% trans count=site.size|numberfmt %}
             {{ count }} message
           {% pluralize %}
             {{ count }} messages
