Fix feedback submission, fix bug 703433

--- a/apps/feedback/templates/feedback/feedback-form.html
+++ b/apps/feedback/templates/feedback/feedback-form.html
@@ -25,9 +25,7 @@
   </header>
 
   <section class="content">
-    <form action="{{ post_url }}" method="post" autocomplete="off">
-
-      {{ csrf() }}
+    <form action="" method="post" autocomplete="off">
       <div class="fields">
         <div>
           {{ form.description.label_tag() }}
