Submit any Feedback with bookmarklet

--- a/apps/common/templates/common/bookmarklet.html
+++ b/apps/common/templates/common/bookmarklet.html
@@ -1,2 +1,2 @@
 <a class="bookmarklet" href="javascript:void((function(){var%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','{{ settings.SITE_URL }}/media/js/bookmarklet.js?'+new Date());document.body.appendChild(e)})());">
-    {{ _('Submit an Issue') }}</a>
+    {{ _('Submit Feedback') }}</a>
