--- a/apps/feedback/templates/feedback/feedback-form.html
+++ b/apps/feedback/templates/feedback/feedback-form.html
@@ -43,7 +43,12 @@
         {% if type == 'sad' %}
           <div>
             {% trans %}
-              Please be as specific as you can in the allotted space. For example, if you are giving feedback about slowness, please tell us about relevant websites, if you notice it at the beginning or later in the browsing session and if there are any actions that you perform in Firefox that are particularly problematic.
+              Please be as specific as you can in the allotted space.
+              For example, if you are giving feedback about slowness,
+              please tell us about relevant websites, if you notice it
+              at the beginning or later in the browsing session and if
+              there are any actions that you perform in Firefox that
+              are particularly problematic.
             {% endtrans %}
           </div>
         {% endif %}
