add line height and resuable class

--- a/apps/feedback/templates/feedback/feedback-form.html
+++ b/apps/feedback/templates/feedback/feedback-form.html
@@ -41,7 +41,7 @@
         </div>
         {% endif %}
         {% if type == 'sad' %}
-          <div>
+          <div class="feedback-message">
             {% trans %}
               Please be as specific as you can in the allotted space.
               For example, if you are giving feedback about slowness,
