--- a/media/css/feedback.css
+++ b/media/css/feedback.css
@@ -215,6 +215,9 @@ article .fade {
     background: -moz-linear-gradient(rgba(255,255,255,0), #fff);
 }
 
+div.feedback-message {
+    line-height: 1.5;
+}
 
 input[type=text], input[type=url], textarea {
     border: 1px solid #BFD0D8;
